app/assets/stylesheets/master.scss
//--------------------------------
// Rumble Style Guide
//--------------------------------
// 1.  Break style application into logical sections based on the functionality we are expressing, not markup
// 2.  Break into sections "Structure", "Typography" and "Skin"
// 3.  Use surrounded comment style for each section
// 4.  Leave two line spaces after a section
// 5.  Leave one line space after a related group of rules
// 6.  Describe the purpose of a logical group of rules in terms of UI
// 7.  Use one space after rule declaration and starting bracket
// 8.  Use one space between attribute: and value.
// 9.  Separate a list of values by a space // need to do this with CSS anyway, FML
// 10. Terminate all lines with a semi-colon (Required in SCSS can be left of in SASS)
// 11. One line per attribute: value
// 12. Use only ONE (class) qualifier in a selector e.g. (.column header a) not (.nav-cols.column header a) where possible
// 13. Do not use IDs unless it is absolutely 100% necessary e.g. (on a style that is only applicable to one element on one page ever)
// 14. Order CSS declarations alphabetically e.g. (padding comes after height)
// 15. Do not use SCSS nesting except for;
//      * referencing an element by id ONCE in a source file
//      * applying styles to pseudo classes of an element

@import "compass";

// Bootstrap Partials
// --------------------------------------------------

// Core variables and mixins
//@import "bootstrap/variables"; // Replace with partials/variables
@import "partials/variables";
@import "bootstrap/mixins";

// CSS Reset
@import "bootstrap/reset";

// Grid system and page structure
@import "bootstrap/scaffolding";
@import "bootstrap/grid";
@import "bootstrap/layouts";

// Base CSS
@import "bootstrap/type";
//@import "bootstrap/code";
@import "bootstrap/forms";
@import "bootstrap/tables";

// Components: common
@import "bootstrap/sprites";
@import "bootstrap/dropdowns";
@import "bootstrap/wells";
@import "bootstrap/component-animations";
@import "bootstrap/close";

// Components: Buttons & Alerts
@import "bootstrap/buttons";
@import "bootstrap/button-groups";
@import "bootstrap/alerts"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less

// Components: Nav
@import "bootstrap/navs";
@import "partials/navbar";
@import "bootstrap/breadcrumbs";
@import "partials/pagination";
@import "bootstrap/pager";

// Components: Popovers
//@import "bootstrap/modals";
//@import "bootstrap/tooltip";
//@import "bootstrap/popovers";

// Components: Misc
@import "bootstrap/thumbnails";
//@import "bootstrap/labels-badges";
//@import "bootstrap/progress-bars";
//@import "bootstrap/accordion";
//@import "bootstrap/carousel";
//@import "bootstrap/hero-unit";

// Utility classes
@import "bootstrap/utilities";

// Learningportal Specific Partials
@import "partials/colours";
@import "partials/tags";
@import "partials/buttons";
@import "partials/forms";




body {
  background-color: #DDDDDD;
}

// MediaWiki markup cleanup
.editsection{
  display: none;
}

.simple {
  background-color: $bodyBg;
  height: 100%;
  vertical-align: baseline;
}

ul {
  list-style-type: none;
  margin: 0;
}

.container-fluid {
  padding: 0;
}

#sidebar-inner {
  position:absolute;
  width:480px;
}

#sidebar {
  background-color:$sectionBg;
  bottom:0;
  float: left;
  height: auto;
  overflow-y:scroll;
  position: fixed;
  top:0;
  width: 480px;
  nav {
    padding: 0 20px;
    float: left;
    width: 440px;
    border-bottom: 1px solid #B8B8B8;
    background-color: $headerBg;
    h1 {
      font-family: Helvetica;
      font-size:18px;
      color: $white;
      height: 60px;
      line-height: 60px;
      float: left;
    }
    > ul {
      margin: 0;
      li {
        margin-right: 20px;
        float: left;
        &:last-child {
          margin-right: 0;
        }
        a {
          color: $white;
          font-size: 15px;
          height: 60px;
          line-height: 60px;
          padding: 0;
        }
      }
    }
  }
  .tagline {
    height: 40px;
    width: 480px;
    float: left;
    background-color: #999999;
    text-align: center;
    h2 {
      height: 40px;
      line-height: 40px;
      font-size: 19px;
      text-shadow: 0 1px 0 #BFBFBF;
      color: #3A3A3A;
    }
  }
  ul.tabbed-nav {
    float: left;
    padding: 0;
    margin: 0;
    width: 480px;
    li {
      width: 25%;
      background-color: #353535;
      float: left;
      a {
        cursor: pointer;
        display: block;
        height: 53px;
        padding-top: 15px;
        border-width: 2px 1px 1px 1px;
        border-color: $black #454545 $black $black;
        border-style: solid;
        padding-left: 20px;
        &:hover {
          text-decoration: none;
        }
      }
      i {
        float: left;
        margin-right: 7px;
        opacity: 0.4;
      }
      span {
        color: #999999;
        font-size: 11px;
        display: block;
        &.number {
          font-size: 26px;
          margin-bottom: 8px;
        }
        &.text {
          height: 14px;
          line-height: 14px;
        }
      }
      &:last-child {
        border-right: 0;
      }
      &:first-child {
        border-left: 0;
      }
      &.active {
        background-color: #4C4C4C;
        &:first-child {
          a{
            border-left: 1px solid #4c4c4c;
          }
        }
        a {
          border-bottom:1px solid #4c4c4c;
          .number, .text {
            color: $white;
          }
          i {
            opacity: 1;
          }
        }
      }
    }
  }
  .tab-content {
    float: left;
    .tab-pane {
      width: 440px;
      color: $white;
      border-bottom: 1px solid $black;
      background-color: #4C4C4C;
      padding: 20px;
      display: none;
    }
    .active {
      display: block;
    }
  }
}

.section-header {
  background-color: $sectionHeaderBg;
  border-bottom: 1px solid $sectionHeaderBorders;
  border-top: 1px solid $sectionHeaderBorders;
  color: #BBBBBB;
  float: left;
  font-size: 17px;
  height: 40px;
  line-height: 40px;
  text-align: center;
  width: 480px;
  position: relative;
  &:first-child {
    border-top: 0;
  }
}

section.pane {
  background-color: $sectionBg;
  border-top: 1px solid #858585;
  float: left;
  padding: 13px 20px;
  width: 440px;
  h3 {
    font-size: 19px;
    font-weight: normal;
    color: $white;
    margin-bottom: 16px;
  }
  ol {
    margin: 0;
    li {
      float: left;
      list-style-position: inside;
      color: $black;
      font-size: 13px;
      font-weight: bold;
      vertical-align: top;
      line-height: 10px;
      margin-bottom: 20px;
      margin-right: 20px;
      width:210px;
      &:nth-child(even){
        margin:0;
      }
    }
  }
  .name {
    line-height: 10px;
    margin-left: 35px;
    margin-bottom: 5px;
    vertical-align: top;
  }
  .counts {
    color: #A7A7A7;
    font-size: 11px;
    font-weight: normal;
    margin-left: 35px;
  }
}

#content {
  bottom: 0;
  left: 480px;
  overflow-y: scroll;
  position: fixed;
  right: 0;
  top: 42px;
}

nav.fixed-navigation {
  display: block;
  position: fixed;
  left: 480px;
  right: 0;
  top: 0;
  z-index: 8000;
  color: $white;
  font-size: 13px;
  background-color: #A7A7A7;
  border-bottom: 1px solid #999;
  padding-left: 12px;
  padding-right: 5px;
  .title {
    height: 40px;
    line-height: 40px;
  }
  .right-fixed {
    float: right;
    height: 40px;
  }
  .desc {
    float: left;
    height: 40px;
    line-height: 40px;
    margin-right: 10px;
  }
}

.article-navigation {
  position: absolute;
}
article {
  background-color: $navListBg;
  border-bottom: 1px solid #999;
  border-top: 1px solid $lightTopBorderHighlight;
  color: #4C4C4C;
  display: block;
  font-size: 13px;
  width: auto;
  .score {
    color: #E1E1E1;
    font-size: 25px;
    float: right;
  }
  .article-body {
    color: $articleMeta;
    padding: 30px;
    &:hover {
      background-color: #CCCCCC;
    }
  }
  .icon {
    background-color: #CCCCCC;
    border: 1px solid $white;
    float: left;
    height: 60px;
    margin-right: 30px;
    width: 60px;
  }
  .meta {
    margin-bottom: 15px;
    margin-left: 90px;
    a {
      color: #00466C;
    }
  }
}

h1.article-title {
  font-size: 25px;
  line-height: 40px;
  margin-bottom: 7px;
  a {
    color: $articleTitle;
  }
}

article.single {
  position: absolute;
  left:0;
  right:0;
  h1 {
    font-size: 36px;
  }
  .article-body {
    background-color: #E1E1E1;
    min-width: 680px;
    padding: 60px;
  }
  p {
    font-size: 19px;
    line-height: 30px;
    margin-bottom: 40px;
  }
  ul {
    margin: 20px 0;
  }
  li {
    font-size: 19px;
    margin-bottom: 10px;
  }
  .meta {
    margin-left: 0;
  }
}
article.video {}
article.text {}
article.audio {}

article.single .contributors ul { //override
  border-top: 1px solid #B7B7B7;
  margin-top: 10px;
  li{
    margin-bottom:0;
  }
}

.contributors, .content-tags {
  margin-top: 50px;
  h4 {
    color: $lightTitle;
    font-size: 19px;
    font-weight: normal;
    margin-bottom:10px;
  }
}

.contributor {
  border-color: $lightTopBorderHighlight transparent $lightBottomBorderHighlight transparent;
  border-style: solid;
  border-width: 1px;
  margin: 0;
  padding: 5px 0;
  &:last-child {
    border-bottom-color:$lightTopBorderHighlight;
  }
}

.avatar {
  background-color: $avatarPlaceholder;
  float: left;
  height: 24px;
  margin-right: 10px;
  width: 24px;
}

.media {
  margin: 0;
}

.media, .bd {
  color: $black;
  font-size: 13px;
  font-weight: bold;
  height: 24px;
  line-height: 24px;
  overflow: hidden;
  _overflow: visible;
  zoom: 1;
}

.media .img {
  float: left;
  margin-right: 10px;
}

.media .img img {
  display: block;
  height: 24px;
  width: 24px;
}

.media .imgExt {
  float: right;
  margin-left: 10px;
}

.letter-link {
  background-color: $lightButtonBg;
  color: $white;
  display:inline-block;
  font-weight:bold;
  height: 28px;
  line-height:28px;
  margin: 0 -2px 2px 0;
  padding: 0 10px;
  text-align: center;
  width: 18px;
  &:hover {
    background-color:$lightButtonHover;
    color: $white;
    text-decoration: none;
  }
}

.letter-link.other {
  width: 58px;
}

.pane.tag-nav {
  border-bottom: 0;
}

.pane.tag-results, .pane.contributor-results {
  border-top: 0;
  margin-top: 0;
  padding-top: 0;
}

.separator {
  color: $separatorColor;
  float: left;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  margin: 5px 0 0 0;
  padding: 10px 20px;
  width: 440px;
}

.resultcount {
  font-weight: normal;
  margin-left: 5px;
}

.content-tags {
  ul {
    border-top: 1px solid #B7B7B7;
    margin: 0px 0 20px 0;
    padding-top: 10px;
  }
}

.no-count {
  list-style-type: none;
}

.admin-table {
  margin-top: 20px;
}

.floated-admin-title {
  margin-bottom: 20px;
}

.app .alert {
  position: absolute;
  top: 20px;
  right: 20px;
  width: 370px;
  z-index: 9999;
  @include box-shadow(2px 2px 4px rgba(0,0,0,0.3))
}

